# aeon-engine

./: .gitignore  CMakeLists.txt  main.cpp  shader.h
include/: EBO.h  VAO.h  VBO.h  camera.h
shaders/: shader.vert.glsl
src/: EBO.cpp  VAO.cpp  VBO.cpp  camera.cpp  main.cpp
